--- a/lstm_attention_model.ipynb
+++ b/lstm_attention_model.ipynb
@@ -520,12 +520,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "preds.to_csv('test_preds_lstm.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v1</th>\n",
+       "      <th>v2</th>\n",
+       "      <th>v3</th>\n",
+       "      <th>v4</th>\n",
+       "      <th>v5</th>\n",
+       "      <th>v6</th>\n",
+       "      <th>v7</th>\n",
+       "      <th>v8</th>\n",
+       "      <th>v9</th>\n",
+       "      <th>v10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>v51</th>\n",
+       "      <th>v52</th>\n",
+       "      <th>v53</th>\n",
+       "      <th>v54</th>\n",
+       "      <th>v55</th>\n",
+       "      <th>v56</th>\n",
+       "      <th>v57</th>\n",
+       "      <th>v58</th>\n",
+       "      <th>v59</th>\n",
+       "      <th>v60</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10002</th>\n",
+       "      <td>580.965454</td>\n",
+       "      <td>622.587402</td>\n",
+       "      <td>580.506714</td>\n",
+       "      <td>623.019836</td>\n",
+       "      <td>580.574707</td>\n",
+       "      <td>623.074463</td>\n",
+       "      <td>581.070801</td>\n",
+       "      <td>623.213379</td>\n",
+       "      <td>580.779358</td>\n",
+       "      <td>622.993713</td>\n",
+       "      <td>...</td>\n",
+       "      <td>580.882629</td>\n",
+       "      <td>622.560059</td>\n",
+       "      <td>580.616394</td>\n",
+       "      <td>623.743835</td>\n",
+       "      <td>580.856018</td>\n",
+       "      <td>623.11084</td>\n",
+       "      <td>580.314697</td>\n",
+       "      <td>622.305115</td>\n",
+       "      <td>580.905457</td>\n",
+       "      <td>622.043762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10015</th>\n",
+       "      <td>462.188019</td>\n",
+       "      <td>908.581909</td>\n",
+       "      <td>461.594116</td>\n",
+       "      <td>909.208740</td>\n",
+       "      <td>461.667908</td>\n",
+       "      <td>909.088013</td>\n",
+       "      <td>461.623138</td>\n",
+       "      <td>909.446472</td>\n",
+       "      <td>462.104492</td>\n",
+       "      <td>908.725037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>461.833008</td>\n",
+       "      <td>908.804932</td>\n",
+       "      <td>461.777344</td>\n",
+       "      <td>908.774353</td>\n",
+       "      <td>462.054871</td>\n",
+       "      <td>909.23230</td>\n",
+       "      <td>462.124878</td>\n",
+       "      <td>908.561279</td>\n",
+       "      <td>461.674530</td>\n",
+       "      <td>908.385803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10019</th>\n",
+       "      <td>462.188019</td>\n",
+       "      <td>908.581909</td>\n",
+       "      <td>461.594116</td>\n",
+       "      <td>909.208740</td>\n",
+       "      <td>461.667908</td>\n",
+       "      <td>909.088013</td>\n",
+       "      <td>461.623138</td>\n",
+       "      <td>909.446472</td>\n",
+       "      <td>462.104492</td>\n",
+       "      <td>908.725037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>461.833008</td>\n",
+       "      <td>908.804932</td>\n",
+       "      <td>461.777344</td>\n",
+       "      <td>908.774353</td>\n",
+       "      <td>462.054871</td>\n",
+       "      <td>909.23230</td>\n",
+       "      <td>462.124878</td>\n",
+       "      <td>908.561279</td>\n",
+       "      <td>461.674530</td>\n",
+       "      <td>908.385803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10028</th>\n",
+       "      <td>567.789978</td>\n",
+       "      <td>603.547302</td>\n",
+       "      <td>567.364868</td>\n",
+       "      <td>603.888855</td>\n",
+       "      <td>567.497314</td>\n",
+       "      <td>603.890381</td>\n",
+       "      <td>567.860107</td>\n",
+       "      <td>604.023132</td>\n",
+       "      <td>567.574158</td>\n",
+       "      <td>603.944153</td>\n",
+       "      <td>...</td>\n",
+       "      <td>567.785461</td>\n",
+       "      <td>603.393066</td>\n",
+       "      <td>567.472839</td>\n",
+       "      <td>604.580383</td>\n",
+       "      <td>567.793335</td>\n",
+       "      <td>603.94812</td>\n",
+       "      <td>567.230957</td>\n",
+       "      <td>603.265930</td>\n",
+       "      <td>567.765320</td>\n",
+       "      <td>602.980408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1003</th>\n",
+       "      <td>642.411682</td>\n",
+       "      <td>712.034607</td>\n",
+       "      <td>642.380066</td>\n",
+       "      <td>712.742920</td>\n",
+       "      <td>642.052734</td>\n",
+       "      <td>712.704285</td>\n",
+       "      <td>642.781128</td>\n",
+       "      <td>712.907715</td>\n",
+       "      <td>642.394165</td>\n",
+       "      <td>712.321533</td>\n",
+       "      <td>...</td>\n",
+       "      <td>642.573120</td>\n",
+       "      <td>712.379456</td>\n",
+       "      <td>642.190857</td>\n",
+       "      <td>713.039124</td>\n",
+       "      <td>642.393616</td>\n",
+       "      <td>712.75293</td>\n",
+       "      <td>642.178223</td>\n",
+       "      <td>711.937927</td>\n",
+       "      <td>642.639954</td>\n",
+       "      <td>711.609375</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 60 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               v1          v2          v3          v4          v5          v6  \\\n",
+       "ID                                                                              \n",
+       "10002  580.965454  622.587402  580.506714  623.019836  580.574707  623.074463   \n",
+       "10015  462.188019  908.581909  461.594116  909.208740  461.667908  909.088013   \n",
+       "10019  462.188019  908.581909  461.594116  909.208740  461.667908  909.088013   \n",
+       "10028  567.789978  603.547302  567.364868  603.888855  567.497314  603.890381   \n",
+       "1003   642.411682  712.034607  642.380066  712.742920  642.052734  712.704285   \n",
+       "\n",
+       "               v7          v8          v9         v10  ...         v51  \\\n",
+       "ID                                                     ...               \n",
+       "10002  581.070801  623.213379  580.779358  622.993713  ...  580.882629   \n",
+       "10015  461.623138  909.446472  462.104492  908.725037  ...  461.833008   \n",
+       "10019  461.623138  909.446472  462.104492  908.725037  ...  461.833008   \n",
+       "10028  567.860107  604.023132  567.574158  603.944153  ...  567.785461   \n",
+       "1003   642.781128  712.907715  642.394165  712.321533  ...  642.573120   \n",
+       "\n",
+       "              v52         v53         v54         v55        v56         v57  \\\n",
+       "ID                                                                             \n",
+       "10002  622.560059  580.616394  623.743835  580.856018  623.11084  580.314697   \n",
+       "10015  908.804932  461.777344  908.774353  462.054871  909.23230  462.124878   \n",
+       "10019  908.804932  461.777344  908.774353  462.054871  909.23230  462.124878   \n",
+       "10028  603.393066  567.472839  604.580383  567.793335  603.94812  567.230957   \n",
+       "1003   712.379456  642.190857  713.039124  642.393616  712.75293  642.178223   \n",
+       "\n",
+       "              v58         v59         v60  \n",
+       "ID                                         \n",
+       "10002  622.305115  580.905457  622.043762  \n",
+       "10015  908.561279  461.674530  908.385803  \n",
+       "10019  908.561279  461.674530  908.385803  \n",
+       "10028  603.265930  567.765320  602.980408  \n",
+       "1003   711.937927  642.639954  711.609375  \n",
+       "\n",
+       "[5 rows x 60 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
