--- a/lstm_attention_model.ipynb
+++ b/lstm_attention_model.ipynb
@@ -508,28 +508,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "net = NN(input_dim, output_dim, hidden_dim, layer_dim)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/train-epoch-lstm11.pth\",map_location=device))\n",
+    "net.load_state_dict(torch.load(\"checkpoints/train-epoch-lstm7.pth\",map_location=device))\n",
     "model = net.to(device)\n",
     "preds = predict(model, device, val_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds.to_csv('test_preds_lstm.csv')"
+    "preds.to_csv('test_preds_lstm_7epoch.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -603,123 +603,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>10002</th>\n",
-       "      <td>580.965454</td>\n",
-       "      <td>622.587402</td>\n",
-       "      <td>580.506714</td>\n",
-       "      <td>623.019836</td>\n",
-       "      <td>580.574707</td>\n",
-       "      <td>623.074463</td>\n",
-       "      <td>581.070801</td>\n",
-       "      <td>623.213379</td>\n",
-       "      <td>580.779358</td>\n",
-       "      <td>622.993713</td>\n",
+       "      <td>373.583679</td>\n",
+       "      <td>409.271179</td>\n",
+       "      <td>373.070251</td>\n",
+       "      <td>409.814087</td>\n",
+       "      <td>373.118713</td>\n",
+       "      <td>409.852966</td>\n",
+       "      <td>373.660858</td>\n",
+       "      <td>410.041901</td>\n",
+       "      <td>373.374878</td>\n",
+       "      <td>409.721375</td>\n",
        "      <td>...</td>\n",
-       "      <td>580.882629</td>\n",
-       "      <td>622.560059</td>\n",
-       "      <td>580.616394</td>\n",
-       "      <td>623.743835</td>\n",
-       "      <td>580.856018</td>\n",
-       "      <td>623.11084</td>\n",
-       "      <td>580.314697</td>\n",
-       "      <td>622.305115</td>\n",
-       "      <td>580.905457</td>\n",
-       "      <td>622.043762</td>\n",
+       "      <td>373.421143</td>\n",
+       "      <td>409.322144</td>\n",
+       "      <td>373.111237</td>\n",
+       "      <td>410.563354</td>\n",
+       "      <td>373.395081</td>\n",
+       "      <td>409.945557</td>\n",
+       "      <td>372.836761</td>\n",
+       "      <td>409.021667</td>\n",
+       "      <td>373.423126</td>\n",
+       "      <td>408.717438</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10015</th>\n",
-       "      <td>462.188019</td>\n",
-       "      <td>908.581909</td>\n",
-       "      <td>461.594116</td>\n",
-       "      <td>909.208740</td>\n",
-       "      <td>461.667908</td>\n",
-       "      <td>909.088013</td>\n",
-       "      <td>461.623138</td>\n",
-       "      <td>909.446472</td>\n",
-       "      <td>462.104492</td>\n",
-       "      <td>908.725037</td>\n",
+       "      <td>307.479889</td>\n",
+       "      <td>594.395630</td>\n",
+       "      <td>306.787903</td>\n",
+       "      <td>595.172546</td>\n",
+       "      <td>306.849792</td>\n",
+       "      <td>595.035889</td>\n",
+       "      <td>306.841583</td>\n",
+       "      <td>595.469055</td>\n",
+       "      <td>307.370453</td>\n",
+       "      <td>594.602295</td>\n",
        "      <td>...</td>\n",
-       "      <td>461.833008</td>\n",
-       "      <td>908.804932</td>\n",
-       "      <td>461.777344</td>\n",
-       "      <td>908.774353</td>\n",
-       "      <td>462.054871</td>\n",
-       "      <td>909.23230</td>\n",
-       "      <td>462.124878</td>\n",
-       "      <td>908.561279</td>\n",
-       "      <td>461.674530</td>\n",
-       "      <td>908.385803</td>\n",
+       "      <td>307.010834</td>\n",
+       "      <td>594.812439</td>\n",
+       "      <td>306.920563</td>\n",
+       "      <td>594.825012</td>\n",
+       "      <td>307.250366</td>\n",
+       "      <td>595.341003</td>\n",
+       "      <td>307.315063</td>\n",
+       "      <td>594.517883</td>\n",
+       "      <td>306.822601</td>\n",
+       "      <td>594.301147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10019</th>\n",
-       "      <td>462.188019</td>\n",
-       "      <td>908.581909</td>\n",
-       "      <td>461.594116</td>\n",
-       "      <td>909.208740</td>\n",
-       "      <td>461.667908</td>\n",
-       "      <td>909.088013</td>\n",
-       "      <td>461.623138</td>\n",
-       "      <td>909.446472</td>\n",
-       "      <td>462.104492</td>\n",
-       "      <td>908.725037</td>\n",
+       "      <td>307.479889</td>\n",
+       "      <td>594.395630</td>\n",
+       "      <td>306.787903</td>\n",
+       "      <td>595.172546</td>\n",
+       "      <td>306.849792</td>\n",
+       "      <td>595.035889</td>\n",
+       "      <td>306.841583</td>\n",
+       "      <td>595.469055</td>\n",
+       "      <td>307.370453</td>\n",
+       "      <td>594.602295</td>\n",
        "      <td>...</td>\n",
-       "      <td>461.833008</td>\n",
-       "      <td>908.804932</td>\n",
-       "      <td>461.777344</td>\n",
-       "      <td>908.774353</td>\n",
-       "      <td>462.054871</td>\n",
-       "      <td>909.23230</td>\n",
-       "      <td>462.124878</td>\n",
-       "      <td>908.561279</td>\n",
-       "      <td>461.674530</td>\n",
-       "      <td>908.385803</td>\n",
+       "      <td>307.010834</td>\n",
+       "      <td>594.812439</td>\n",
+       "      <td>306.920563</td>\n",
+       "      <td>594.825012</td>\n",
+       "      <td>307.250366</td>\n",
+       "      <td>595.341003</td>\n",
+       "      <td>307.315063</td>\n",
+       "      <td>594.517883</td>\n",
+       "      <td>306.822601</td>\n",
+       "      <td>594.301147</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10028</th>\n",
-       "      <td>567.789978</td>\n",
-       "      <td>603.547302</td>\n",
-       "      <td>567.364868</td>\n",
-       "      <td>603.888855</td>\n",
-       "      <td>567.497314</td>\n",
-       "      <td>603.890381</td>\n",
-       "      <td>567.860107</td>\n",
-       "      <td>604.023132</td>\n",
-       "      <td>567.574158</td>\n",
-       "      <td>603.944153</td>\n",
+       "      <td>365.634552</td>\n",
+       "      <td>397.756958</td>\n",
+       "      <td>365.154175</td>\n",
+       "      <td>398.212952</td>\n",
+       "      <td>365.262207</td>\n",
+       "      <td>398.203186</td>\n",
+       "      <td>365.680573</td>\n",
+       "      <td>398.384796</td>\n",
+       "      <td>365.398865</td>\n",
+       "      <td>398.197205</td>\n",
        "      <td>...</td>\n",
-       "      <td>567.785461</td>\n",
-       "      <td>603.393066</td>\n",
-       "      <td>567.472839</td>\n",
-       "      <td>604.580383</td>\n",
-       "      <td>567.793335</td>\n",
-       "      <td>603.94812</td>\n",
-       "      <td>567.230957</td>\n",
-       "      <td>603.265930</td>\n",
-       "      <td>567.765320</td>\n",
-       "      <td>602.980408</td>\n",
+       "      <td>365.546753</td>\n",
+       "      <td>397.687622</td>\n",
+       "      <td>365.194733</td>\n",
+       "      <td>398.930786</td>\n",
+       "      <td>365.552155</td>\n",
+       "      <td>398.312927</td>\n",
+       "      <td>364.974731</td>\n",
+       "      <td>397.506287</td>\n",
+       "      <td>365.509460</td>\n",
+       "      <td>397.180695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1003</th>\n",
-       "      <td>642.411682</td>\n",
-       "      <td>712.034607</td>\n",
-       "      <td>642.380066</td>\n",
-       "      <td>712.742920</td>\n",
-       "      <td>642.052734</td>\n",
-       "      <td>712.704285</td>\n",
-       "      <td>642.781128</td>\n",
-       "      <td>712.907715</td>\n",
-       "      <td>642.394165</td>\n",
-       "      <td>712.321533</td>\n",
+       "      <td>414.335907</td>\n",
+       "      <td>468.951660</td>\n",
+       "      <td>414.237854</td>\n",
+       "      <td>469.793701</td>\n",
+       "      <td>413.883850</td>\n",
+       "      <td>469.741394</td>\n",
+       "      <td>414.674164</td>\n",
+       "      <td>470.003113</td>\n",
+       "      <td>414.295074</td>\n",
+       "      <td>469.289703</td>\n",
        "      <td>...</td>\n",
-       "      <td>642.573120</td>\n",
-       "      <td>712.379456</td>\n",
-       "      <td>642.190857</td>\n",
-       "      <td>713.039124</td>\n",
-       "      <td>642.393616</td>\n",
-       "      <td>712.75293</td>\n",
-       "      <td>642.178223</td>\n",
-       "      <td>711.937927</td>\n",
-       "      <td>642.639954</td>\n",
-       "      <td>711.609375</td>\n",
+       "      <td>414.399597</td>\n",
+       "      <td>469.401367</td>\n",
+       "      <td>413.973114</td>\n",
+       "      <td>470.124146</td>\n",
+       "      <td>414.219147</td>\n",
+       "      <td>469.857361</td>\n",
+       "      <td>413.987061</td>\n",
+       "      <td>468.897980</td>\n",
+       "      <td>414.446289</td>\n",
+       "      <td>468.523468</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -729,40 +729,40 @@
       "text/plain": [
        "               v1          v2          v3          v4          v5          v6  \\\n",
        "ID                                                                              \n",
-       "10002  580.965454  622.587402  580.506714  623.019836  580.574707  623.074463   \n",
-       "10015  462.188019  908.581909  461.594116  909.208740  461.667908  909.088013   \n",
-       "10019  462.188019  908.581909  461.594116  909.208740  461.667908  909.088013   \n",
-       "10028  567.789978  603.547302  567.364868  603.888855  567.497314  603.890381   \n",
-       "1003   642.411682  712.034607  642.380066  712.742920  642.052734  712.704285   \n",
+       "10002  373.583679  409.271179  373.070251  409.814087  373.118713  409.852966   \n",
+       "10015  307.479889  594.395630  306.787903  595.172546  306.849792  595.035889   \n",
+       "10019  307.479889  594.395630  306.787903  595.172546  306.849792  595.035889   \n",
+       "10028  365.634552  397.756958  365.154175  398.212952  365.262207  398.203186   \n",
+       "1003   414.335907  468.951660  414.237854  469.793701  413.883850  469.741394   \n",
        "\n",
        "               v7          v8          v9         v10  ...         v51  \\\n",
        "ID                                                     ...               \n",
-       "10002  581.070801  623.213379  580.779358  622.993713  ...  580.882629   \n",
-       "10015  461.623138  909.446472  462.104492  908.725037  ...  461.833008   \n",
-       "10019  461.623138  909.446472  462.104492  908.725037  ...  461.833008   \n",
-       "10028  567.860107  604.023132  567.574158  603.944153  ...  567.785461   \n",
-       "1003   642.781128  712.907715  642.394165  712.321533  ...  642.573120   \n",
+       "10002  373.660858  410.041901  373.374878  409.721375  ...  373.421143   \n",
+       "10015  306.841583  595.469055  307.370453  594.602295  ...  307.010834   \n",
+       "10019  306.841583  595.469055  307.370453  594.602295  ...  307.010834   \n",
+       "10028  365.680573  398.384796  365.398865  398.197205  ...  365.546753   \n",
+       "1003   414.674164  470.003113  414.295074  469.289703  ...  414.399597   \n",
        "\n",
-       "              v52         v53         v54         v55        v56         v57  \\\n",
-       "ID                                                                             \n",
-       "10002  622.560059  580.616394  623.743835  580.856018  623.11084  580.314697   \n",
-       "10015  908.804932  461.777344  908.774353  462.054871  909.23230  462.124878   \n",
-       "10019  908.804932  461.777344  908.774353  462.054871  909.23230  462.124878   \n",
-       "10028  603.393066  567.472839  604.580383  567.793335  603.94812  567.230957   \n",
-       "1003   712.379456  642.190857  713.039124  642.393616  712.75293  642.178223   \n",
+       "              v52         v53         v54         v55         v56         v57  \\\n",
+       "ID                                                                              \n",
+       "10002  409.322144  373.111237  410.563354  373.395081  409.945557  372.836761   \n",
+       "10015  594.812439  306.920563  594.825012  307.250366  595.341003  307.315063   \n",
+       "10019  594.812439  306.920563  594.825012  307.250366  595.341003  307.315063   \n",
+       "10028  397.687622  365.194733  398.930786  365.552155  398.312927  364.974731   \n",
+       "1003   469.401367  413.973114  470.124146  414.219147  469.857361  413.987061   \n",
        "\n",
        "              v58         v59         v60  \n",
        "ID                                         \n",
-       "10002  622.305115  580.905457  622.043762  \n",
-       "10015  908.561279  461.674530  908.385803  \n",
-       "10019  908.561279  461.674530  908.385803  \n",
-       "10028  603.265930  567.765320  602.980408  \n",
-       "1003   711.937927  642.639954  711.609375  \n",
+       "10002  409.021667  373.423126  408.717438  \n",
+       "10015  594.517883  306.822601  594.301147  \n",
+       "10019  594.517883  306.822601  594.301147  \n",
+       "10028  397.506287  365.509460  397.180695  \n",
+       "1003   468.897980  414.446289  468.523468  \n",
        "\n",
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
