--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,30 +95,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create a loader to enable batch processing"
+    "### Check input distribution\n",
+    "#### Create Loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sz = 4\n",
+    "batch_sz = 1\n",
     "\n",
     "def my_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "    inp = [numpy.dstack([scene['p_in'], scene['v_in']]) for scene in batch]\n",
-    "    out = [numpy.dstack([scene['p_out'], scene['v_out']]) for scene in batch]\n",
-    "    out = torch.LongTensor(out)\n",
-    "    inp = torch.tensor(inp, dtype=torch.float)\n",
-    "    out = torch.tensor(out, dtype=torch.float)\n",
-    "    return [inp, out]\n",
+    "    inp = np.array([np.array(x).flatten() for x in [scene['p_in'] for scene in batch]])\n",
+    "    out = np.array([np.array(x).flatten() for x in [scene['p_out'] for scene in batch]])\n",
+    "    return [inp[0], out[0]]\n",
     "\n",
-    "# sampler = RandomSampler(train_dataset, num_samples = 1000, replacement=True)\n",
-    "sampler = RandomSampler(train_dataset)\n",
-    "\n",
-    "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, sampler = sampler, drop_last=True)\n"
+    "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, drop_last=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Extract values of input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3277.29638672 1947.62609863 3277.29614258 ...    0.            0.\n",
+      "    0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i_batch, batch in enumerate(train_loader):\n",
+    "    inp, out = batch\n",
+    "    print(inp)\n",
+    "    break"
    ]
   },
   {
@@ -184,234 +207,6 @@
     "    \"\"\"\n",
     "    show_sample_batch(sample_batch, agent_id)\n",
     "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class NN(nn.Module):\n",
-    "    def __init__(self, input_size, output_size, hidden_dim, n_layers):\n",
-    "        super(NN, self).__init__()\n",
-    "\n",
-    "        # Defining some parameters\n",
-    "        self.hidden_dim = hidden_dim\n",
-    "        self.n_layers = n_layers\n",
-    "\n",
-    "        #Defining the layers\n",
-    "        # RNN Layer\n",
-    "        self.rnn = nn.RNN(input_size, hidden_dim, n_layers, batch_first=True)   \n",
-    "        # Fully connected layer\n",
-    "        self.fc = nn.Linear(hidden_dim, output_size)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        \n",
-    "        batch_size = x.size(0)\n",
-    "\n",
-    "        # Initializing hidden state for first input using method defined below\n",
-    "        hidden = self.init_hidden(batch_size)\n",
-    "\n",
-    "        # Passing in the input and hidden state into the model and obtaining outputs\n",
-    "        out, hidden = self.rnn(x, hidden)\n",
-    "        \n",
-    "        # Reshaping the outputs such that it can be fit into the fully connected layer\n",
-    "#         out = out.contiguous().view(-1, self.hidden_dim)\n",
-    "        out = self.fc(out)\n",
-    "        \n",
-    "        return out\n",
-    "    \n",
-    "    def init_hidden(self, batch_size):\n",
-    "        # This method generates the first hidden state of zeros which we'll use in the forward pass\n",
-    "        # We'll send the tensor holding the hidden state to the device we specified earlier as well\n",
-    "        hidden = torch.zeros(self.n_layers, batch_size, self.hidden_dim)\n",
-    "        return hidden.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm_notebook as tqdm\n",
-    "def train(model, device, train_loader, optimizer, epoch, log_interval=10000):\n",
-    "    model.train()\n",
-    "    iterator = tqdm(train_loader, total=int(len(train_loader)))\n",
-    "    counter = 0\n",
-    "    for batch_idx, (data, target) in enumerate(iterator):\n",
-    "        data, target = torch.reshape(data, (4, 60, -1)).to(device), torch.reshape(target[:,:,:,:2], (4, 60, -1)).to(device)\n",
-    "        optimizer.zero_grad()\n",
-    "        output = model(data)\n",
-    "        loss = nn.MSELoss()(output, target)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        counter += 1\n",
-    "        iterator.set_postfix(loss=(loss.item()*data.size(0) / (counter * train_loader.batch_size)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test(model, device, test_loader):\n",
-    "    model.eval()\n",
-    "    test_loss = 0\n",
-    "    correct = 0\n",
-    "    with torch.no_grad():\n",
-    "        for data, agent in test_loader:\n",
-    "            data, agent = torch.reshape(data, (4, 60, -1)).to(device)\n",
-    "            output = model(data)\n",
-    "#             print(output)\n",
-    "#             test_loss += F.nll_loss(output, target, reduction='sum').item() # sum up batch loss\n",
-    "#             pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
-    "#             correct += pred.eq(target.view_as(pred)).sum().item()\n",
-    "#     test_loss /= len(test_loader.dataset)\n",
-    "\n",
-    "#     print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "#         test_loss, correct, len(test_loader.dataset),\n",
-    "#         100. * correct / len(test_loader.dataset)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# input dimension\n",
-    "input_dim = 76\n",
-    "hidden_dim = 60  # hidden layer dimension\n",
-    "layer_dim = 1   # number of hidden layers\n",
-    "output_dim = 60   # output dimension\n",
-    "\n",
-    "if torch.cuda.is_available():  \n",
-    "    device = \"cuda:0\" \n",
-    "else:  \n",
-    "    device = \"cpu\"  \n",
-    "    \n",
-    "learning_rate = 0.0001\n",
-    "momentum = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# net = NN(input_dim, output_dim, hidden_dim, layer_dim)\n",
-    "# model = net.to(device) #using cpu here\n",
-    "# optimizer = optim.SGD(model.parameters(), lr=learning_rate,\n",
-    "#                       momentum=momentum, weight_decay=1e-5)\n",
-    "# num_epoch = 10\n",
-    "\n",
-    "# for epoch in range(1, num_epoch + 1):\n",
-    "#         train(model, device, train_loader, optimizer, epoch)\n",
-    "#         torch.save(model.state_dict(), 'checkpoints/train-epoch{}.pth'.format(epoch + 1)) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Test and predict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model=torch.load(\"checkpoints/train-epoch11.pth\",map_location=device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_checkpoint(filepath):\n",
-    "    checkpoint = torch.load(filepath)\n",
-    "    model = checkpoint['model']\n",
-    "    model.load_state_dict(checkpoint['state_dict'])\n",
-    "    for parameter in model.parameters():\n",
-    "        parameter.requires_grad = False\n",
-    "    \n",
-    "    model.eval()\n",
-    "    \n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "batch_sz = 4\n",
-    "\n",
-    "def my_test_collate(batch):\n",
-    "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
-    "#     print(batch)\n",
-    "    inp = [numpy.dstack([scene['p_in'], scene['v_in']]) for scene in batch]\n",
-    "    inp = torch.tensor(inp, dtype=torch.float)\n",
-    "    agent = [scene['agent_id'] for scene in batch]\n",
-    "    track = [scene['track_id'] for scene in batch]\n",
-    "    track_ids = []\n",
-    "    for scene in range(len(agent)):\n",
-    "        for track_id in range(len(track[scene])):\n",
-    "            if agent[scene] == track[scene][track_id][0][0]:\n",
-    "                track_ids.append(track_id)\n",
-    "                break\n",
-    "    return [inp, track_ids]\n",
-    "\n",
-    "# intialize a dataset\n",
-    "val_dataset  = ArgoverseDataset(data_path=val_path)\n",
-    "val_loader = DataLoader(val_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_test_collate, num_workers=0, drop_last=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict(model, device, test_loader):\n",
-    "    model.eval()\n",
-    "    test_loss = 0\n",
-    "    correct = 0\n",
-    "    predictions = []\n",
-    "    with torch.no_grad():\n",
-    "        for data, agent in test_loader:\n",
-    "            data = torch.reshape(data, (4, 60, -1)).to(device)\n",
-    "            output = torch.reshape(model(data), (4, 60, 30, -1))\n",
-    "            for i in range(len(agent)):\n",
-    "                scene = output[i][agent[i]]\n",
-    "                predictions.append(scene)\n",
-    "    predict = [torch.reshape(t, (-1,)) for t in predictions]\n",
-    "    sample = pd.read_csv('sample_submission.csv')\n",
-    "    preds_df = sample.set_index('ID')\n",
-    "    for i in range(3200):\n",
-    "        preds_df.iloc[i] = predict[i].tolist()\n",
-    "    return preds_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = NN(input_dim, output_dim, hidden_dim, layer_dim)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/train-epoch11.pth\",map_location=device))\n",
-    "model = net.to(device)\n",
-    "preds = predict(model, device, val_loader)"
    ]
   },
   {
