--- a/lstm_attention_model.ipynb
+++ b/lstm_attention_model.ipynb
@@ -19,7 +19,7 @@
     "from torch import optim\n",
     "import torch.nn.functional as F\n",
     "from torch.autograd import Variable\n",
-    "from torch.utils.data.sampler import RandomSampler\n",
+    "from torch.utils.data.sampler import RandomSampler, random_split, SubsetRandomSampler, WeightedRandomSampler\n",
     "\n",
     "\"\"\"Change to the data folder\"\"\"\n",
     "new_path = \"./new_train/new_train\"\n",
@@ -115,15 +115,16 @@
     "    out = torch.tensor(out, dtype=torch.float)\n",
     "    return [inp, out]\n",
     "\n",
-    "# sampler = RandomSampler(train_dataset, num_samples = 1000, replacement=True)\n",
-    "sampler = RandomSampler(train_dataset)\n",
+    "train_i\n",
+    "# sampler = RandomSampler(train_dataset, num_samples = 50000, replacement=True)\n",
+    "# sampler = RandomSampler(train_dataset)\n",
     "\n",
     "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, sampler = sampler, drop_last=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,15 +135,15 @@
     "        self.hidden_dim = hidden_dim\n",
     "        self.n_layers = n_layers\n",
     "        self.gru = nn.GRU(input_size, hidden_dim, n_layers, batch_first=True)   \n",
-    "        self.fc = nn.Linear(hidden_dim, output_size)\n",
+    "        self.fc1 = nn.Linear(hidden_dim, output_size)\n",
+    "        self.fc2 = nn.Linear(output_size, output_size)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        batch_size = x.size(0)\n",
     "\n",
     "        hidden = self.init_hidden(batch_size)\n",
     "        out, hidden = self.gru(x, hidden)\n",
-    "\n",
-    "#         out = out.contiguous().view(-1, self.hidden_dim)\n",
+    "        out = self.fc(out)\n",
     "        out = self.fc(out)\n",
     "        \n",
     "        return out\n",
@@ -611,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
