--- a/lstm_attention_model.ipynb
+++ b/lstm_attention_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from torch import optim\n",
     "import torch.nn.functional as F\n",
     "from torch.autograd import Variable\n",
-    "from torch.utils.data.sampler import RandomSampler, random_split, SubsetRandomSampler, WeightedRandomSampler\n",
+    "from torch.utils.data import RandomSampler, random_split, SubsetRandomSampler, WeightedRandomSampler\n",
     "\n",
     "\"\"\"Change to the data folder\"\"\"\n",
     "new_path = \"./new_train/new_train\"\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,11 +100,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_sz = 128\n",
+    "batch_sz = 32\n",
     "\n",
     "def my_collate(batch):\n",
     "    \"\"\" collate lists of samples into batches, create [ batch_sz x agent_sz x seq_len x feature] \"\"\"\n",
@@ -115,16 +115,18 @@
     "    out = torch.tensor(out, dtype=torch.float)\n",
     "    return [inp, out]\n",
     "\n",
-    "train_i\n",
-    "# sampler = RandomSampler(train_dataset, num_samples = 50000, replacement=True)\n",
+    "train_dataset, val_dataset = random_split(train_dataset, (199078, 6864))\n",
+    "\n",
+    "sampler = RandomSampler(train_dataset, num_samples = 50000, replacement=True)\n",
     "# sampler = RandomSampler(train_dataset)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, sampler = sampler, drop_last=True)\n"
+    "train_loader = DataLoader(train_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, sampler = sampler, drop_last=True)\n",
+    "val_loader = DataLoader(val_dataset,batch_size=batch_sz, shuffle = False, collate_fn=my_collate, num_workers=0, drop_last=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,8 +145,8 @@
     "\n",
     "        hidden = self.init_hidden(batch_size)\n",
     "        out, hidden = self.gru(x, hidden)\n",
-    "        out = self.fc(out)\n",
-    "        out = self.fc(out)\n",
+    "        out = self.fc1(out)\n",
+    "        out = self.fc2(out)\n",
     "        \n",
     "        return out\n",
     "    \n",
@@ -155,15 +157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm_notebook as tqdm\n",
+    "from tqdm.notebook import tqdm\n",
     "def train(model, device, train_loader, optimizer, epoch, log_interval=10000):\n",
     "    model.train()\n",
     "    iterator = tqdm(train_loader, total=int(len(train_loader)))\n",
-    "    running_loss = 0\n",
+    "    loss_ema = -1\n",
     "    for batch_idx, (data, target) in enumerate(iterator):\n",
     "        data, target = torch.reshape(data, (batch_sz, 60, -1)).to(device), torch.reshape(target[:,:,:,:2], (batch_sz, 60, -1)).to(device)\n",
     "        optimizer.zero_grad()\n",
@@ -171,31 +173,37 @@
     "        loss = nn.MSELoss()(output, target)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        running_loss += loss.item()\n",
-    "        iterator.set_postfix(loss=running_loss)\n",
+    "        if loss_ema < 0:\n",
+    "            loss_ema = loss.item()\n",
+    "        loss_ema = loss_ema * 0.99 + loss.item()*0.01\n",
+    "        iterator.set_postfix(loss=loss_ema)\n",
     "    return running_loss\n",
     "#         iterator.set_postfix(loss=(loss.item()*data.size(0) / (counter * train_loader.batch_size)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test(model, device, test_loader):\n",
     "    model.eval()\n",
-    "    test_loss = 0\n",
-    "    correct = 0\n",
+    "    loss_ema = -1\n",
     "    with torch.no_grad():\n",
-    "        for data, agent in test_loader:\n",
-    "            data, agent = torch.reshape(data, (4, 60, -1)).to(device)\n",
-    "            output = model(data)"
+    "        for data, target in test_loader:\n",
+    "            data, target = torch.reshape(data, (batch_sz, 60, -1)).to(device), torch.reshape(target[:,:,:,:2], (batch_sz, 60, -1)).to(device)\n",
+    "            output = model(data)\n",
+    "            loss = nn.MSELoss()(output, target)\n",
+    "            if loss_ema < 0:\n",
+    "                loss_ema = loss.item()\n",
+    "            loss_ema = loss_ema * 0.99 + loss.item()*0.01\n",
+    "    print(\"Test loss: {}\".format(loss_ema))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,23 +224,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ea01ac9fdbee446fb0951b737fc7dd5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1562 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-39-db4b405d3857>:7: DeprecationWarning: an integer is required (got type numpy.float64).  Implicit conversion to integers using __int__ is deprecated, and may be removed in a future version of Python.\n",
+      "  out = torch.LongTensor(out)\n",
+      "<ipython-input-39-db4b405d3857>:9: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  out = torch.tensor(out, dtype=torch.float)\n"
+     ]
+    }
+   ],
    "source": [
-    "# net = NN(input_dim, output_dim, hidden_dim, layer_dim)\n",
-    "# model = net.to(device)\n",
-    "# optimizer = optim.SGD(model.parameters(), lr=learning_rate,\n",
-    "#                       momentum=momentum, weight_decay=1e-5)\n",
-    "# num_epoch = 10\n",
-    "# losses = []\n",
-    "# for epoch in range(1, num_epoch + 1):\n",
-    "#     loss = train(model, device, train_loader, optimizer, epoch)\n",
-    "#     losses.append(loss)\n",
-    "#     torch.save(model.state_dict(), 'checkpoints/train-epoch-lstm{}.pth'.format(epoch + 1)) \n",
+    "net = NN(input_dim, output_dim, hidden_dim, layer_dim)\n",
+    "model = net.to(device)\n",
+    "optimizer = optim.SGD(model.parameters(), lr=learning_rate,\n",
+    "                      momentum=momentum, weight_decay=1e-5)\n",
+    "num_epoch = 10\n",
+    "losses = []\n",
+    "for epoch in range(1, num_epoch + 1):\n",
+    "    loss = train(model, device, train_loader, optimizer, epoch)\n",
+    "    losses.append(loss)\n",
+    "    test(model, device, val_loader)\n",
+    "    torch.save(model.state_dict(), 'checkpoints/train-epoch-gru-2linear-{}.pth'.format(epoch + 1)) \n",
     "    \n",
-    "# with open(\"losses.txt\", \"w\") as output:\n",
-    "#     output.write(str(losses))"
+    "with open(\"losses_test.txt\", \"w\") as output:\n",
+    "    output.write(str(losses))"
    ]
   },
   {
@@ -612,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
