--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -195,36 +195,20 @@
     "class NN(nn.Module):\n",
     "    def __init__(self, input_size, output_size, hidden_dim, n_layers):\n",
     "        super(NN, self).__init__()\n",
-    "\n",
-    "        # Defining some parameters\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.n_layers = n_layers\n",
-    "\n",
-    "        #Defining the layers\n",
-    "        # RNN Layer\n",
     "        self.rnn = nn.RNN(input_size, hidden_dim, n_layers, batch_first=True)   \n",
-    "        # Fully connected layer\n",
     "        self.fc = nn.Linear(hidden_dim, output_size)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        \n",
     "        batch_size = x.size(0)\n",
-    "\n",
-    "        # Initializing hidden state for first input using method defined below\n",
     "        hidden = self.init_hidden(batch_size)\n",
-    "\n",
-    "        # Passing in the input and hidden state into the model and obtaining outputs\n",
     "        out, hidden = self.rnn(x, hidden)\n",
-    "        \n",
-    "        # Reshaping the outputs such that it can be fit into the fully connected layer\n",
-    "#         out = out.contiguous().view(-1, self.hidden_dim)\n",
     "        out = self.fc(out)\n",
-    "        \n",
     "        return out\n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
-    "        # This method generates the first hidden state of zeros which we'll use in the forward pass\n",
-    "        # We'll send the tensor holding the hidden state to the device we specified earlier as well\n",
     "        hidden = torch.zeros(self.n_layers, batch_size, self.hidden_dim)\n",
     "        return hidden.to(device)"
    ]
@@ -264,16 +248,7 @@
     "    with torch.no_grad():\n",
     "        for data, agent in test_loader:\n",
     "            data, agent = torch.reshape(data, (4, 60, -1)).to(device)\n",
-    "            output = model(data)\n",
-    "#             print(output)\n",
-    "#             test_loss += F.nll_loss(output, target, reduction='sum').item() # sum up batch loss\n",
-    "#             pred = output.argmax(dim=1, keepdim=True) # get the index of the max log-probability\n",
-    "#             correct += pred.eq(target.view_as(pred)).sum().item()\n",
-    "#     test_loss /= len(test_loader.dataset)\n",
-    "\n",
-    "#     print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "#         test_loss, correct, len(test_loader.dataset),\n",
-    "#         100. * correct / len(test_loader.dataset)))"
+    "            output = model(data)"
    ]
   },
   {
@@ -440,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
